# Pixel_forge

./: .gitmodules  CMakeLists.txt  LICENSE  conventions.txt  options.cmake
cmake/: utils.cmake
libs/: CMakeLists.txt
libs/adapters/: CMakeLists.txt  adapters.cppm
libs/adapters/include/PixelForge/adapters/: macros.hpp
libs/adapters/ring_queue/: CMakeLists.txt  ring_queue.cppm
libs/adapters/stack/: CMakeLists.txt  stack.cppm
libs/adapters/utils/: CMakeLists.txt  traits.cppm
libs/core/: CMakeLists.txt  core.cppm
libs/core/assert/: CMakeLists.txt  assert.cpp  assert.cppm
libs/core/exception/: CMakeLists.txt  exception.cpp  exception.cppm
libs/core/include/PixelForge/core/: macros.hpp
libs/core/math/: CMakeLists.txt  math.cppm
libs/core/mem/: CMakeLists.txt
libs/core/mem/modules/: align.cppm  exception.cppm  linear_allocator.cppm  mem.cppm  memzero.cppm
libs/core/mem/src/: exception.cpp  memzero.cpp
libs/core/meta/: CMakeLists.txt
libs/core/meta/modules/: concat_strings.cppm  enum.cppm  err_policy.cppm  int_to_str.cppm  int_to_sv.cppm  meta.cppm  str_to_int.cppm  sv_to_int.cppm
libs/core/require/: CMakeLists.txt  require.cpp  require.cppm
libs/core/status/: CMakeLists.txt  status.cpp  status.cppm
libs/core/utils/: CMakeLists.txt
libs/core/utils/modules/: char_encoding.cppm  utils.cppm
libs/core/utils/src/: char_encoding.cpp
libs/log_decoder/: CMakeLists.txt  log_decoder.cppm
libs/logging/: CMakeLists.txt
libs/logging/modules/: log_codes.cppm
libs/mem/: CMakeLists.txt
libs/mem/modules/: align.cppm  exception.cppm  linear_allocator.cppm  mem.cppm  memzero.cppm
libs/mem/src/: exception.cpp  memzero.cpp
libs/views/: CMakeLists.txt  views.cppm
libs/views/include/PixelForge/views/: macros.hpp
libs/views/ring_queue/: CMakeLists.txt  ring_queue.cppm
libs/views/utils/: CMakeLists.txt  traits.cppm
perf_val/: CMakeLists.txt
perf_val/adapters/: CMakeLists.txt
perf_val/adapters/ring_queue/: CMakeLists.txt  pv_destructive_move.cpp
validation/: CMakeLists.txt
validation/adapters/: CMakeLists.txt
validation/adapters/ring_queue/: CMakeLists.txt  test_ring_queue.cpp
validation/adapters/stack/: CMakeLists.txt  test_stack.cpp
validation/core/: CMakeLists.txt
validation/core/assert/: CMakeLists.txt
validation/core/math/: CMakeLists.txt  test_math.cpp
validation/core/mem/: CMakeLists.txt  stupid_memzero_explicit_dead_var.cpp  test_align.cpp  test_memzero.cpp  test_memzero_explicit.cpp
validation/core/mem/memzero/: stupid_memzero_explicit_dead_var.cpp
validation/core/meta/: CMakeLists.txt  test_concat_strings.cpp  test_int_to_str_vv.cpp
validation/core/require/: CMakeLists.txt  test_require.cpp
validation/helpers/: CMakeLists.txt  helpers.cppm
validation/mem/: CMakeLists.txt  test_align.cpp
validation/mem/memzero/: CMakeLists.txt  stupid_memzero_explicit_dead_var.cpp  test_memzero.cpp
validation/views/: CMakeLists.txt
validation/views/ring_queue/: CMakeLists.txt  test_ring_queue.cpp
